--- a/css/style.css
+++ b/css/style.css
@@ -195,12 +195,20 @@ body {
     border-top-right-radius: 0px;
     height: 10px;
     background-color: white;
-    width: 20%;
+    width: 30%;
 }
 .bar-playerg
 {border-radius: 30px;
     height: 10px;
     background-color: gray;
-    width: 70%;
+    width: 80%;
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
   
+}
+.square-playlist1 {
+    padding-top: 1rem;
+ 
+    font-size: 20px;
+
 }
