--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,8 @@ body {
 .main-container {
     background-color: var(--main-color);
     flex-grow: 1;
+    overflow: auto;
+    padding-top: 5rem;
 }
 
 .button-upg {
@@ -162,24 +164,24 @@ body {
 }
 
 .img1 {
-    padding-left: 1rem;
+    padding-left: .2rem;
    
     display: block;
     width: 100%;
     height: 80px;
-    width: 80px;
+    width: 40px;
     height: 100%;
 }
 .space-pdg-r-ic{
-    padding-right:  3rem;
+    padding-right:  .5rem;
     
 }
 .space-pdg-r{
-    padding-right:  2rem;
+    padding-right:  .4rem;
     
 }
 .space-pdg-l{
-    padding-left:  1rem;
+    padding-left:  .4rem;
     
 }
 .bar-player
@@ -190,6 +192,7 @@ body {
 }
 .bar-playerw
 {
+    
     border-radius: 30px;
     border-end-end-radius: 0px;
     border-top-right-radius: 0px;
@@ -201,7 +204,7 @@ body {
 {border-radius: 30px;
     height: 7px;
     background-color: gray;
-    width: 80%;
+    width: 90%;
     border-bottom-left-radius: 0px;
     border-top-left-radius: 0px;
   
@@ -211,4 +214,18 @@ body {
  
     font-size: 20px;
 
+}
+
+.main-ul{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    list-style: none ;
+    justify-content: center;
+    column-gap: 1rem;
+    padding-bottom: 1rem;
+}
+
+.main-ul li{  
+    padding-bottom: .5rem;
 }
