--- a/css/style-media.css
+++ b/css/style-media.css
@@ -73,10 +73,22 @@
     padding-left:  1rem;
     
 }
+
 }
 
 /* MD - medium */
-@media screen and (min-width: 768px) {}
-
-/* LG - large */
-@media screen and (min-width: 992px) {}
+@media screen and (min-width: 768px) {
+    .col-md-1-4 {
+      flex-basis: calc((100% - (0.5rem * 3)) / 4);
+    }
+  
+   
+    }
+  
+  
+  @media screen and (min-width: 992px) {
+    .col-lg-1-6 {
+      flex-basis: calc((100% - (0.5rem * 5)) / 6);
+    }
+  
+  }
