--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@
     --single-color: white;
 }
 
+.single-color1 {
+    color: white;
+    font-weight: bold;
+    padding-bottom: 2rem;
+}
 .single-color {
     color: white;
     font-weight: bold;
@@ -36,6 +41,11 @@ body {
     display: flex;
     flex-direction: column;
 }
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
 
 
 .top-container {
@@ -51,6 +61,11 @@ body {
     flex-shrink: 0;
     height: 80px;
     background-color: var(--ftr-color);
+    position: fixed;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+ 
 }
 
 .sidebar {
@@ -59,6 +74,8 @@ body {
     display: flex;
     flex-direction: column;
     background-color: var(--side-color);
+    
+    
 
 }
 
@@ -144,6 +161,10 @@ body {
     flex-grow: 1;
     overflow: auto;
     padding-top: 5rem;
+    
+    
+   
+   
 }
 
 .button-upg {
@@ -155,6 +176,7 @@ body {
     position: fixed;
     right: 1%;
     top: 2%;
+    z-index: 1;
 }
 
 .button-upg:hover {
@@ -176,6 +198,12 @@ body {
     padding-right:  .5rem;
     
 }
+.white{
+    color: white;
+}
+.txt-cent{
+    text-align: center;
+}
 .space-pdg-r{
     padding-right:  .4rem;
     
@@ -184,6 +212,13 @@ body {
     padding-left:  .4rem;
     
 }
+.ptb-05 {
+    padding: 1rem 0;
+  }
+  .cover {
+    position: relative;
+    width: 100%;
+  }
 .bar-player
 {
     align-items: center;
@@ -223,9 +258,24 @@ body {
     list-style: none ;
     justify-content: center;
     column-gap: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 3rem;
 }
 
 .main-ul li{  
     padding-bottom: .5rem;
 }
+.col-xs-1-2 {
+    flex-basis: calc((100% - (0.5rem * 1)) / 2);
+   
+  }
+  .small-text {
+    color: var(--txt-color);
+  }
+  .circle.img{
+    
+    object-fit: cover;
+    width: 90%;
+    border-radius: 50%;
+    padding: .5rem;
+       aspect-ratio: 1/1;
+  }
